# cefi_data_mcp_server

./: .gitignore  LICENSE  README.md  cefi_thredds_crawl.py  mcp_cefi_analysis.py  mcp_cefi_data_info.py  mcp_cefi_data_query.py  pyproject.toml
test_mcp/: mcp_cefi_data_info.py  weather.py
